Updating README with new installation instructions